
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int logical ;
typedef int integer ;
typedef int ftnlen ;
typedef void* doublereal ;
struct TYPE_6__ {int r; int i; } ;
typedef TYPE_1__ doublecomplex ;
typedef char* address ;


 int c__1 ;
 int c__2 ;
 int c_n1 ;
 int max (int,int) ;
 int min (int,int) ;
 int s_cat (char*,char**,int*,int *,int ) ;

int zunmhr_(char *side, char *trans, integer *m, integer *n,
 integer *ilo, integer *ihi, doublecomplex *a, integer *lda,
 doublecomplex *tau, doublecomplex *c__, integer *ldc, doublecomplex *
 work, integer *lwork, integer *info)
{

    address a__1[2];
    integer a_dim1, a_offset, c_dim1, c_offset, i__1[2], i__2;
    char ch__1[2];


    static integer i1, i2, nb, mi, nh, ni, nq, nw;
    static logical left;
    extern logical lsame_(char *, char *);
    static integer iinfo;
    extern int xerbla_(char *, integer *);
    extern integer ilaenv_(integer *, char *, char *, integer *, integer *,
     integer *, integer *, ftnlen, ftnlen);
    static integer lwkopt;
    static logical lquery;
    extern int zunmqr_(char *, char *, integer *, integer *,
     integer *, doublecomplex *, integer *, doublecomplex *,
     doublecomplex *, integer *, doublecomplex *, integer *, integer *);
    a_dim1 = *lda;
    a_offset = 1 + a_dim1;
    a -= a_offset;
    --tau;
    c_dim1 = *ldc;
    c_offset = 1 + c_dim1;
    c__ -= c_offset;
    --work;


    *info = 0;
    nh = *ihi - *ilo;
    left = lsame_(side, "L");
    lquery = *lwork == -1;



    if (left) {
 nq = *m;
 nw = *n;
    } else {
 nq = *n;
 nw = *m;
    }
    if (! left && ! lsame_(side, "R")) {
 *info = -1;
    } else if (! lsame_(trans, "N") && ! lsame_(trans,
     "C")) {
 *info = -2;
    } else if (*m < 0) {
 *info = -3;
    } else if (*n < 0) {
 *info = -4;
    } else if (*ilo < 1 || *ilo > max(1,nq)) {
 *info = -5;
    } else if (*ihi < min(*ilo,nq) || *ihi > nq) {
 *info = -6;
    } else if (*lda < max(1,nq)) {
 *info = -8;
    } else if (*ldc < max(1,*m)) {
 *info = -11;
    } else if (*lwork < max(1,nw) && ! lquery) {
 *info = -13;
    }

    if (*info == 0) {
 if (left) {

     i__1[0] = 1, a__1[0] = side;
     i__1[1] = 1, a__1[1] = trans;
     s_cat(ch__1, a__1, i__1, &c__2, (ftnlen)2);
     nb = ilaenv_(&c__1, "ZUNMQR", ch__1, &nh, n, &nh, &c_n1, (ftnlen)
      6, (ftnlen)2);
 } else {

     i__1[0] = 1, a__1[0] = side;
     i__1[1] = 1, a__1[1] = trans;
     s_cat(ch__1, a__1, i__1, &c__2, (ftnlen)2);
     nb = ilaenv_(&c__1, "ZUNMQR", ch__1, m, &nh, &nh, &c_n1, (ftnlen)
      6, (ftnlen)2);
 }
 lwkopt = max(1,nw) * nb;
 work[1].r = (doublereal) lwkopt, work[1].i = 0.;
    }

    if (*info != 0) {
 i__2 = -(*info);
 xerbla_("ZUNMHR", &i__2);
 return 0;
    } else if (lquery) {
 return 0;
    }



    if (*m == 0 || *n == 0 || nh == 0) {
 work[1].r = 1., work[1].i = 0.;
 return 0;
    }

    if (left) {
 mi = nh;
 ni = *n;
 i1 = *ilo + 1;
 i2 = 1;
    } else {
 mi = *m;
 ni = nh;
 i1 = 1;
 i2 = *ilo + 1;
    }

    zunmqr_(side, trans, &mi, &ni, &nh, &a[*ilo + 1 + *ilo * a_dim1], lda, &
     tau[*ilo], &c__[i1 + i2 * c_dim1], ldc, &work[1], lwork, &iinfo);

    work[1].r = (doublereal) lwkopt, work[1].i = 0.;
    return 0;



}
